Added memory example, fixed strings example

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 <body>
   <nav>
     <ul>
-      <li><a href="add">Add</a></li>
-      <li><a href="importexport">Import/Export</a></li>
-      <li><a href="animation">Animation</a></li>
+      <li><a href="add">Add</a> (console)</li>
+      <li><a href="importexport">Import/Export</a> (console)</li>
+      <li><a href="memory">Memory</a> (console)</li>
+      <li><a href="strings">Strings</a> (console)</li>
+      <li><a href="animation">Animation</a> (canvas)</li>
     </ul>
   </nav>
 </body>
