--- a/strings/index.html
+++ b/strings/index.html
@@ -11,7 +11,6 @@ const readStr = (ptr, len) => {
   let str = "";
   for (let i = 0; i < len; ++i) {
     str += String.fromCodePoint(memory[ptr + i]);
-    console.log(ptr, i, memory[ptr+i])
   }
   return str;
 }
@@ -26,7 +25,7 @@ fetchAndInstantiate('main.wasm', {env}).then(function(instance) {
   let ptr = 64;
   let str = "Hello World!"
   writeStr(ptr, str)
-  instance.exports.logTwice(ptr, str.length);
+  instance.exports.mirrorLog(ptr, str.length);
 });
 
 // fetchAndInstantiate() found in wasm-utils.js
