Added simple malloc example

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <li><a href="importexport">Import/Export</a> (console)</li>
       <li><a href="memory">Memory</a> (console)</li>
       <li><a href="strings">Strings</a> (console)</li>
+      <li><a href="malloc">Malloc/Free</a> (console)</li>
       <li><a href="animation">Animation</a> (canvas)</li>
     </ul>
   </nav>
