Added webgl example to index page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <li><a href="strings">Strings</a> (console)</li>
       <li><a href="malloc">Malloc/Free</a> (console)</li>
       <li><a href="animation">Animation</a> (canvas)</li>
+      <li><a href="webgl">WebGL</a> (canvas+webgl)</li>
     </ul>
   </nav>
 </body>
