--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li><a href="malloc">Malloc/Free</a> (console)</li>
       <li><a href="animation">Animation</a> (canvas)</li>
       <li><a href="webgl">WebGL</a> (canvas+webgl)</li>
+      <li><a href="webgl">Pong</a> (canvas+webgl)</li>
     </ul>
   </nav>
 </body>
